--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "usehooks-ts": "^2.12.1"
+    "usehooks-ts": "^2.12.1",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
